--- a/style.css
+++ b/style.css
@@ -1,8 +1,49 @@
-head{
-    background-image: url(beach.jpg);
-}
+
 body{
-    font-family: comic sans-serif;
-    font-size: 50;
-    background-color: aqua;
+    font-family: 'Courier New', Courier, monospace;
+    background-image: url(beach.jpg);
+    background-size: 100vw;
+    font-size: 50px;
+}
+
+h1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   
+}
+
+h2{
+    font-size:40px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -50px;
+}
+
+#agregar{
+   font-family: 'Courier New', Courier, monospace;
+   color: black;
+   background-color: hsl(33, 22%, 90%);
+   border-radius: 30px;
+   border-color: transparent;
+   width: 350px;
+   height: 80px;
+   font-size: 30px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin-left: 600px;
+   margin-bottom: 100px;
+  
+}
+#agregar:hover{
+    transform: scale(1.2);
+    border-color: yellowgreen;
+    background-color: yellowgreen ;
+}
+
+#lista{
+    font-size: 22px;
+    font-family: 'Courier New', Courier, monospace;
 }
